[gd_scene load_steps=7 format=4 uid="uid://dtesl8yy51apa"]

[ext_resource type="Script" path="res://scripts/room.gd" id="1_63q5h"]
[ext_resource type="Texture2D" uid="uid://bnwu7qbf28h6g" path="res://sprites/tilesets/plains.png" id="1_civ3h"]
[ext_resource type="Texture2D" uid="uid://c7nuxhf88ujcf" path="res://sprites/tilesets/grass.png" id="2_ng5gf"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_motm8"]
texture = ExtResource("1_civ3h")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
0:9/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
4:9/0 = 0
5:9/0 = 0
0:10/0 = 0
1:10/0 = 0
2:10/0 = 0
3:10/0 = 0
4:10/0 = 0
5:10/0 = 0
0:11/0 = 0
1:11/0 = 0
2:11/0 = 0
3:11/0 = 0
4:11/0 = 0
5:11/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_c17fl"]
texture = ExtResource("2_ng5gf")
0:0/0 = 0

[sub_resource type="TileSet" id="TileSet_ahw74"]
sources/0 = SubResource("TileSetAtlasSource_motm8")
sources/1 = SubResource("TileSetAtlasSource_c17fl")

[node name="room" type="Node2D"]
script = ExtResource("1_63q5h")

[node name="base" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAAAAAAAAAADAAUAAAAAAAEAAAADAAUAAAAAAAIAAAADAAUAAAAAAAMAAAADAAUAAAAAAAQAAAADAAUAAAAAAAUAAAADAAUAAAAAAAYAAAADAAUAAAAAAA0AAAADAAUAAAAAAA4AAAADAAUAAAAAAA8AAAADAAUAAAAAABAAAAADAAUAAAAAABEAAAADAAUAAAAAABIAAAADAAUAAAAAABMAAAADAAUAAAABAP//AAADAAUAAFACAP//AAADAAUAAFADAP//AAADAAUAAFAEAP//AAADAAUAAFAFAP//AAADAAUAAFATAP//AAADAAUAAFAUAP//AAADAAUAAFAVAAAAAAADAAUAADAVAAEAAAADAAUAADAVAAIAAAADAAUAADAVAAMAAAADAAUAADAVAAQAAAADAAUAADAVAAUAAAADAAUAADAVAAYAAAADAAUAADAVAA0AAAADAAUAADAVAA4AAAADAAUAADAVAA8AAAADAAUAADAVABAAAAADAAUAADAVABEAAAADAAUAADAVABIAAAADAAUAADAVABMAAAADAAUAADABABQAAAADAAUAAGACABQAAAADAAUAAGADABQAAAADAAUAAGAEABQAAAADAAUAAGAFABQAAAADAAUAAGAGABQAAAADAAUAAGAHABQAAAADAAUAAGAOABQAAAADAAUAAGAPABQAAAADAAUAAGAQABQAAAADAAUAAGARABQAAAADAAUAAGASABQAAAADAAUAAGATABQAAAADAAUAAGAUABQAAAADAAUAAGAVABQAAAAFAAUAAAAAABQAAAAFAAUAAFAAAP//AAAFAAUAADAVAP//AAAFAAUAAGABAAAAAQAAAAAAAAABAAEAAQAAAAAAAAABAAIAAQAAAAAAAAABAAMAAQAAAAAAAAABAAQAAQAAAAAAAAABAAUAAQAAAAAAAAABAAYAAQAAAAAAAAABAAcAAQAAAAAAAAABAAgAAQAAAAAAAAABAAkAAQAAAAAAAAABAAoAAQAAAAAAAAABAAsAAQAAAAAAAAABAAwAAQAAAAAAAAABAA0AAQAAAAAAAAABAA4AAQAAAAAAAAABAA8AAQAAAAAAAAABABAAAQAAAAAAAAABABEAAQAAAAAAAAABABIAAQAAAAAAAAABABMAAQAAAAAAAAACAAAAAQAAAAAAAAACAAEAAQAAAAAAAAACAAIAAQAAAAAAAAACAAMAAQAAAAAAAAACAAQAAQAAAAAAAAACAAUAAQAAAAAAAAACAAYAAQAAAAAAAAACAAcAAQAAAAAAAAACAAgAAQAAAAAAAAACAAkAAQAAAAAAAAACAAoAAQAAAAAAAAACAAsAAQAAAAAAAAACAAwAAQAAAAAAAAACAA0AAQAAAAAAAAACAA4AAQAAAAAAAAACAA8AAQAAAAAAAAACABAAAQAAAAAAAAACABEAAQAAAAAAAAACABIAAQAAAAAAAAACABMAAQAAAAAAAAADAAAAAQAAAAAAAAADAAEAAQAAAAAAAAADAAIAAQAAAAAAAAADAAMAAQAAAAAAAAADAAQAAQAAAAAAAAADAAUAAQAAAAAAAAADAAYAAQAAAAAAAAADAAcAAQAAAAAAAAADAAgAAQAAAAAAAAADAAkAAQAAAAAAAAADAAoAAQAAAAAAAAADAAsAAQAAAAAAAAADAAwAAQAAAAAAAAADAA0AAQAAAAAAAAADAA4AAQAAAAAAAAADAA8AAQAAAAAAAAADABAAAQAAAAAAAAADABEAAQAAAAAAAAADABIAAQAAAAAAAAADABMAAQAAAAAAAAAEAAAAAQAAAAAAAAAEAAEAAQAAAAAAAAAEAAIAAQAAAAAAAAAEAAMAAQAAAAAAAAAEAAQAAQAAAAAAAAAEAAUAAQAAAAAAAAAEAAYAAQAAAAAAAAAEAAcAAQAAAAAAAAAEAAgAAQAAAAAAAAAEAAkAAQAAAAAAAAAEAAoAAQAAAAAAAAAEAAsAAQAAAAAAAAAEAAwAAQAAAAAAAAAEAA0AAQAAAAAAAAAEAA4AAQAAAAAAAAAEAA8AAQAAAAAAAAAEABAAAQAAAAAAAAAEABEAAQAAAAAAAAAEABIAAQAAAAAAAAAEABMAAQAAAAAAAAAFAAAAAQAAAAAAAAAFAAEAAQAAAAAAAAAFAAIAAQAAAAAAAAAFAAMAAQAAAAAAAAAFAAQAAQAAAAAAAAAFAAUAAQAAAAAAAAAFAAYAAQAAAAAAAAAFAAcAAQAAAAAAAAAFAAgAAQAAAAAAAAAFAAkAAQAAAAAAAAAFAAoAAQAAAAAAAAAFAAsAAQAAAAAAAAAFAAwAAQAAAAAAAAAFAA0AAQAAAAAAAAAFAA4AAQAAAAAAAAAFAA8AAQAAAAAAAAAFABAAAQAAAAAAAAAFABEAAQAAAAAAAAAFABIAAQAAAAAAAAAFABMAAQAAAAAAAAAGAAAAAQAAAAAAAAAGAAEAAQAAAAAAAAAGAAIAAQAAAAAAAAAGAAMAAQAAAAAAAAAGAAQAAQAAAAAAAAAGAAUAAQAAAAAAAAAGAAYAAQAAAAAAAAAGAAcAAQAAAAAAAAAGAAgAAQAAAAAAAAAGAAkAAQAAAAAAAAAGAAoAAQAAAAAAAAAGAAsAAQAAAAAAAAAGAAwAAQAAAAAAAAAGAA0AAQAAAAAAAAAGAA4AAQAAAAAAAAAGAA8AAQAAAAAAAAAGABAAAQAAAAAAAAAGABEAAQAAAAAAAAAGABIAAQAAAAAAAAAGABMAAQAAAAAAAAAHAAAAAQAAAAAAAAAHAAEAAQAAAAAAAAAHAAIAAQAAAAAAAAAHAAMAAQAAAAAAAAAHAAQAAQAAAAAAAAAHAAUAAQAAAAAAAAAHAAYAAQAAAAAAAAAHAAcAAQAAAAAAAAAHAAgAAQAAAAAAAAAHAAkAAQAAAAAAAAAHAAoAAQAAAAAAAAAHAAsAAQAAAAAAAAAHAAwAAQAAAAAAAAAHAA0AAQAAAAAAAAAHAA4AAQAAAAAAAAAHAA8AAQAAAAAAAAAHABAAAQAAAAAAAAAHABEAAQAAAAAAAAAHABIAAQAAAAAAAAAHABMAAQAAAAAAAAAIAAAAAQAAAAAAAAAIAAEAAQAAAAAAAAAIAAIAAQAAAAAAAAAIAAMAAQAAAAAAAAAIAAQAAQAAAAAAAAAIAAUAAQAAAAAAAAAIAAYAAQAAAAAAAAAIAAcAAQAAAAAAAAAIAAgAAQAAAAAAAAAIAAkAAQAAAAAAAAAIAAoAAQAAAAAAAAAIAAsAAQAAAAAAAAAIAAwAAQAAAAAAAAAIAA0AAQAAAAAAAAAIAA4AAQAAAAAAAAAIAA8AAQAAAAAAAAAIABAAAQAAAAAAAAAIABEAAQAAAAAAAAAIABIAAQAAAAAAAAAJAAAAAQAAAAAAAAAJAAEAAQAAAAAAAAAJAAIAAQAAAAAAAAAJAAMAAQAAAAAAAAAJAAQAAQAAAAAAAAAJAAUAAQAAAAAAAAAJAAYAAQAAAAAAAAAJAAcAAQAAAAAAAAAJAAgAAQAAAAAAAAAJAAkAAQAAAAAAAAAJAAoAAQAAAAAAAAAJAAsAAQAAAAAAAAAJAAwAAQAAAAAAAAAJAA0AAQAAAAAAAAAJAA4AAQAAAAAAAAAJAA8AAQAAAAAAAAAJABAAAQAAAAAAAAAJABEAAQAAAAAAAAAJABIAAQAAAAAAAAAKAAAAAQAAAAAAAAAKAAEAAQAAAAAAAAAKAAIAAQAAAAAAAAAKAAMAAQAAAAAAAAAKAAQAAQAAAAAAAAAKAAUAAQAAAAAAAAAKAAYAAQAAAAAAAAAKAAcAAQAAAAAAAAAKAAgAAQAAAAAAAAAKAAkAAQAAAAAAAAAKAAoAAQAAAAAAAAAKAAsAAQAAAAAAAAAKAAwAAQAAAAAAAAAKAA0AAQAAAAAAAAAKAA4AAQAAAAAAAAAKAA8AAQAAAAAAAAAKABAAAQAAAAAAAAAKABEAAQAAAAAAAAAKABIAAQAAAAAAAAALAAAAAQAAAAAAAAALAAEAAQAAAAAAAAALAAIAAQAAAAAAAAALAAMAAQAAAAAAAAALAAQAAQAAAAAAAAALAAUAAQAAAAAAAAALAAYAAQAAAAAAAAALAAcAAQAAAAAAAAALAAgAAQAAAAAAAAALAAkAAQAAAAAAAAALAAoAAQAAAAAAAAALAAsAAQAAAAAAAAALAAwAAQAAAAAAAAALAA0AAQAAAAAAAAALAA4AAQAAAAAAAAALAA8AAQAAAAAAAAALABAAAQAAAAAAAAALABEAAQAAAAAAAAALABIAAQAAAAAAAAAMAAAAAQAAAAAAAAAMAAEAAQAAAAAAAAAMAAIAAQAAAAAAAAAMAAMAAQAAAAAAAAAMAAQAAQAAAAAAAAAMAAUAAQAAAAAAAAAMAAYAAQAAAAAAAAAMAAcAAQAAAAAAAAAMAAgAAQAAAAAAAAAMAAkAAQAAAAAAAAAMAAoAAQAAAAAAAAAMAAsAAQAAAAAAAAAMAAwAAQAAAAAAAAAMAA0AAQAAAAAAAAAMAA4AAQAAAAAAAAAMAA8AAQAAAAAAAAAMABAAAQAAAAAAAAAMABEAAQAAAAAAAAAMABIAAQAAAAAAAAANAAAAAQAAAAAAAAANAAEAAQAAAAAAAAANAAIAAQAAAAAAAAANAAMAAQAAAAAAAAANAAQAAQAAAAAAAAANAAUAAQAAAAAAAAANAAYAAQAAAAAAAAANAAcAAQAAAAAAAAANAAgAAQAAAAAAAAANAAkAAQAAAAAAAAANAAoAAQAAAAAAAAANAAsAAQAAAAAAAAANAAwAAQAAAAAAAAANAA0AAQAAAAAAAAANAA4AAQAAAAAAAAANAA8AAQAAAAAAAAANABAAAQAAAAAAAAANABEAAQAAAAAAAAANABIAAQAAAAAAAAAOAAAAAQAAAAAAAAAOAAEAAQAAAAAAAAAOAAIAAQAAAAAAAAAOAAMAAQAAAAAAAAAOAAQAAQAAAAAAAAAOAAUAAQAAAAAAAAAOAAYAAQAAAAAAAAAOAAcAAQAAAAAAAAAOAAgAAQAAAAAAAAAOAAkAAQAAAAAAAAAOAAoAAQAAAAAAAAAOAAsAAQAAAAAAAAAOAAwAAQAAAAAAAAAOAA0AAQAAAAAAAAAOAA4AAQAAAAAAAAAOAA8AAQAAAAAAAAAOABAAAQAAAAAAAAAOABEAAQAAAAAAAAAOABIAAQAAAAAAAAAOABMAAQAAAAAAAAAPAAAAAQAAAAAAAAAPAAEAAQAAAAAAAAAPAAIAAQAAAAAAAAAPAAMAAQAAAAAAAAAPAAQAAQAAAAAAAAAPAAUAAQAAAAAAAAAPAAYAAQAAAAAAAAAPAAcAAQAAAAAAAAAPAAgAAQAAAAAAAAAPAAkAAQAAAAAAAAAPAAoAAQAAAAAAAAAPAAsAAQAAAAAAAAAPAAwAAQAAAAAAAAAPAA0AAQAAAAAAAAAPAA4AAQAAAAAAAAAPAA8AAQAAAAAAAAAPABAAAQAAAAAAAAAPABEAAQAAAAAAAAAPABIAAQAAAAAAAAAPABMAAQAAAAAAAAAQAAAAAQAAAAAAAAAQAAEAAQAAAAAAAAAQAAIAAQAAAAAAAAAQAAMAAQAAAAAAAAAQAAQAAQAAAAAAAAAQAAUAAQAAAAAAAAAQAAYAAQAAAAAAAAAQAAcAAQAAAAAAAAAQAAgAAQAAAAAAAAAQAAkAAQAAAAAAAAAQAAoAAQAAAAAAAAAQAAsAAQAAAAAAAAAQAAwAAQAAAAAAAAAQAA0AAQAAAAAAAAAQAA4AAQAAAAAAAAAQAA8AAQAAAAAAAAAQABAAAQAAAAAAAAAQABEAAQAAAAAAAAAQABIAAQAAAAAAAAAQABMAAQAAAAAAAAARAAAAAQAAAAAAAAARAAEAAQAAAAAAAAARAAIAAQAAAAAAAAARAAMAAQAAAAAAAAARAAQAAQAAAAAAAAARAAUAAQAAAAAAAAARAAYAAQAAAAAAAAARAAcAAQAAAAAAAAARAAgAAQAAAAAAAAARAAkAAQAAAAAAAAARAAoAAQAAAAAAAAARAAsAAQAAAAAAAAARAAwAAQAAAAAAAAARAA0AAQAAAAAAAAARAA4AAQAAAAAAAAARAA8AAQAAAAAAAAARABAAAQAAAAAAAAARABEAAQAAAAAAAAARABIAAQAAAAAAAAARABMAAQAAAAAAAAASAAAAAQAAAAAAAAASAAEAAQAAAAAAAAASAAIAAQAAAAAAAAASAAMAAQAAAAAAAAASAAQAAQAAAAAAAAASAAUAAQAAAAAAAAASAAYAAQAAAAAAAAASAAcAAQAAAAAAAAASAAgAAQAAAAAAAAASAAkAAQAAAAAAAAASAAoAAQAAAAAAAAASAAsAAQAAAAAAAAASAAwAAQAAAAAAAAASAA0AAQAAAAAAAAASAA4AAQAAAAAAAAASAA8AAQAAAAAAAAASABAAAQAAAAAAAAASABEAAQAAAAAAAAASABIAAQAAAAAAAAASABMAAQAAAAAAAAATAAAAAQAAAAAAAAATAAEAAQAAAAAAAAATAAIAAQAAAAAAAAATAAMAAQAAAAAAAAATAAQAAQAAAAAAAAATAAUAAQAAAAAAAAATAAYAAQAAAAAAAAATAAcAAQAAAAAAAAATAAgAAQAAAAAAAAATAAkAAQAAAAAAAAATAAoAAQAAAAAAAAATAAsAAQAAAAAAAAATAAwAAQAAAAAAAAATAA0AAQAAAAAAAAATAA4AAQAAAAAAAAATAA8AAQAAAAAAAAATABAAAQAAAAAAAAATABEAAQAAAAAAAAATABIAAQAAAAAAAAATABMAAQAAAAAAAAAUAAAAAQAAAAAAAAAUAAEAAQAAAAAAAAAUAAIAAQAAAAAAAAAUAAMAAQAAAAAAAAAUAAQAAQAAAAAAAAAUAAUAAQAAAAAAAAAUAAYAAQAAAAAAAAAUAAcAAQAAAAAAAAAUAAgAAQAAAAAAAAAUAAkAAQAAAAAAAAAUAAoAAQAAAAAAAAAUAAsAAQAAAAAAAAAUAAwAAQAAAAAAAAAUAA0AAQAAAAAAAAAUAA4AAQAAAAAAAAAUAA8AAQAAAAAAAAAUABAAAQAAAAAAAAAUABEAAQAAAAAAAAAUABIAAQAAAAAAAAAUABMAAQAAAAAAAAAGAP//AAADAAUAAFAHAP//AAADAAUAAFAOAP//AAADAAUAAFAPAP//AAADAAUAAFAQAP//AAADAAUAAFARAP//AAADAAUAAFASAP//AAADAAUAAFAIABMAAQAAAAAAAAAJABMAAQAAAAAAAAAKABMAAQAAAAAAAAALABMAAQAAAAAAAAAMABMAAQAAAAAAAAANABMAAQAAAAAAAAA=")
tile_set = SubResource("TileSet_ahw74")

[node name="SouthWall" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAAIABQAAAADAAUAAGAJABQAAAADAAUAAGAKABQAAAADAAUAAGALABQAAAADAAUAAGAMABQAAAADAAUAAGANABQAAAADAAUAAGAOABQAAAADAAUAAGA=")
tile_set = SubResource("TileSet_ahw74")

[node name="EastWall" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAAVAAcAAAABAAUAAAAVAAgAAAABAAUAAAAVAAkAAAABAAUAAAAVAAoAAAABAAUAAAAVAAsAAAABAAUAAAAVAAwAAAABAAUAAAA=")
tile_set = SubResource("TileSet_ahw74")

[node name="NorthWall" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAAIAP//AAADAAUAAFAJAP//AAADAAUAAFAKAP//AAADAAUAAFALAP//AAADAAUAAFAMAP//AAADAAUAAFANAP//AAADAAUAAFA=")
tile_set = SubResource("TileSet_ahw74")

[node name="WestWall" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAAAAAcAAAADAAUAAAAAAAgAAAADAAUAAAAAAAkAAAADAAUAAAAAAAoAAAADAAUAAAAAAAsAAAADAAUAAAAAAAwAAAADAAUAAAA=")
tile_set = SubResource("TileSet_ahw74")

[node name="SouthDoor" type="TileMapLayer" parent="."]
visible = false
tile_map_data = PackedByteArray("AAAHABQAAAADAAUAAAAHABUAAAADAAUAAAAHABYAAAADAAUAAAAHABcAAAADAAUAAAAHABgAAAADAAUAAAAHABkAAAADAAUAAAAHABoAAAAFAAYAAAAOABQAAAADAAUAADAOABUAAAADAAUAADAOABYAAAADAAUAADAOABcAAAADAAUAADAOABgAAAADAAUAADAOABkAAAADAAUAADAOABoAAAAFAAYAAGA=")
tile_set = SubResource("TileSet_ahw74")

[node name="Eastdoor" type="TileMapLayer" parent="."]
visible = false
tile_map_data = PackedByteArray("AAAVAA0AAAACAAQAAAAWAAYAAAACAAYAAAAWAA0AAAACAAQAAAAXAAYAAAACAAYAAAAXAA0AAAACAAQAAAAYAAYAAAACAAYAAAAYAA0AAAACAAQAAAAZAAYAAAACAAYAAAAZAA0AAAACAAQAAAAaAAYAAAACAAYAAAAaAA0AAAACAAQAAAAbAAYAAAACAAYAAAAbAA0AAAACAAQAAAAcAAYAAAACAAYAAAAcAA0AAAACAAQAAAAdAAYAAAACAAYAAAAdAA0AAAACAAQAAAAeAAYAAAACAAYAAAAeAA0AAAACAAQAAAA=")
tile_set = SubResource("TileSet_ahw74")

[node name="WestDoor" type="TileMapLayer" parent="."]
visible = false
tile_map_data = PackedByteArray("AAD4/wYAAAACAAYAAAD4/w0AAAACAAQAAAD5/wYAAAACAAYAAAD5/w0AAAACAAQAAAD6/wYAAAACAAYAAAD6/w0AAAACAAQAAAD7/wYAAAACAAYAAAD7/w0AAAACAAQAAAD8/wYAAAACAAYAAAD8/w0AAAACAAQAAAD9/wYAAAACAAYAAAD9/w0AAAACAAQAAAD+/wYAAAACAAYAAAD+/w0AAAACAAQAAAD//wYAAAACAAYAAAD//w0AAAACAAQAAAA=")
tile_set = SubResource("TileSet_ahw74")

[node name="NorthDoor" type="TileMapLayer" parent="."]
visible = false
tile_map_data = PackedByteArray("AAAHAPn/AAADAAUAAAAHAPr/AAADAAUAAAAHAPv/AAADAAUAAAAHAPz/AAADAAUAAAAHAP3/AAADAAUAAAAHAP7/AAADAAUAAAAOAPn/AAADAAUAADAOAPr/AAADAAUAADAOAPv/AAADAAUAADAOAPz/AAADAAUAADAOAP3/AAADAAUAADAOAP7/AAADAAUAADAOAP//AAABAAYAAAAHAP//AAADAAYAAAA=")
tile_set = SubResource("TileSet_ahw74")
